--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
             <!-- Links de Navegação (Desktop) -->
             <div class="hidden md:flex space-x-8 items-center">
                 <a href="#sobre" class="nav-link text-gray-600 hover:text-purple-700 transition-colors duration-300 font-medium">Sobre Nós</a>
+                <a href="https://void-studio-4.myshopify.com/" class=" text-gray-600 hover:text-purple-700 transition-colors duration-300 font-medium">Loja</a>
                 <a href="#servicos" class="nav-link text-gray-600 hover:text-purple-700 transition-colors duration-300 font-medium">Serviços</a>
                 <a href="#projetos" class="nav-link text-gray-600 hover:text-purple-700 transition-colors duration-300 font-medium">Projetos</a>
                 <a href="#page-jogos" class="nav-link text-gray-600 hover:text-purple-700 transition-colors duration-300 font-medium">Jogos</a>
@@ -386,7 +387,7 @@
                         </div>
                     </div>
                     <!-- Projeto 2 (Com link) -->
-                    <a href="https://sourceforge.net/projects/vocalis/" target="_blank" rel="noopener noreferrer" class="group relative rounded-2xl overflow-hidden shadow-lg animated-element slide-up delay-400">
+                    <a href="https://void-studio-4.myshopify.com/" target="_blank" rel="noopener noreferrer" class="group relative rounded-2xl overflow-hidden shadow-lg animated-element slide-up delay-400">
                         <img src="files/vocalis.png" 
                              alt="Imagem do programa Vocalis"
                              class="w-full h-full object-cover transition-transform duration-500 ease-in-out group-hover:scale-110">
@@ -686,7 +687,7 @@
                         </div>
                     </div>
                     <!-- App 3 -->
-                    <a href="https://sourceforge.net/projects/vocalis/" target="_blank" rel="noopener noreferrer" class="group relative rounded-2xl overflow-hidden shadow-lg animated-element slide-up delay-400">
+                    <a href="https://void-studio-4.myshopify.com/" target="_blank" rel="noopener noreferrer" class="group relative rounded-2xl overflow-hidden shadow-lg animated-element slide-up delay-400">
                         <img src="files/vocalis.png" 
                              alt="Imagem do programa Vocalis"
                              class="w-full h-full object-cover transition-transform duration-500 ease-in-out group-hover:scale-110">
