--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
         <!-- Menu Mobile (Oculto por padrão) -->
         <div id="mobile-menu" class="hidden md:hidden bg-white shadow-xl absolute top-full left-0 right-0">
             <a href="#sobre" class="nav-link block px-6 py-4 text-gray-600 hover:bg-purple-50 hover:text-purple-700 transition-colors duration-300">Sobre Nós</a>
+            <a href="https://void-studio-4.myshopify.com/" class="block px-6 py-4 text-gray-600 hover:bg-purple-50 hover:text-purple-700 transition-colors duration-300">Loja</a>
             <a href="#servicos" class="nav-link block px-6 py-4 text-gray-600 hover:bg-purple-50 hover:text-purple-700 transition-colors duration-300">Serviços</a>
             <a href="#projetos" class="nav-link block px-6 py-4 text-gray-600 hover:bg-purple-50 hover:text-purple-700 transition-colors duration-300">Projetos</a>
             <a href="#page-jogos" class="nav-link block px-6 py-4 text-gray-600 hover:bg-purple-50 hover:text-purple-700 transition-colors duration-300">Jogos</a>
@@ -1676,4 +1677,5 @@ document.addEventListener('DOMContentLoaded', () => {
 
     </script>
 </body>
+
 </html>
