--- a/index.html
+++ b/index.html
@@ -975,19 +975,19 @@
                     </div>
                     <!-- Site 4 (Pedro Davi) -->
                     <div class="project-card group relative rounded-2xl overflow-hidden shadow-lg animated-element slide-up delay-300 cursor-pointer"
-                         data-project-title="Perfil do Pedro Davi"
-                         data-project-type="Porfólio Pessoal (Carrd)"
-                         data-project-media="files/pedrosite.png"
-                         data-project-description="Um portfólio pessoal simples e direto, criado na plataforma Carrd, apresentando os projetos e habilidades do nosso CEO, Pedro Davi."
-                         data-project-url="https://pedrodavi120.carrd.co/">
+                         data-project-title="Gang Team E-Sports"
+                         data-project-type="Site de uma organização de e-sports"
+                         data-project-media="files/gangsite.png, files/gangvideo.mp4"
+                         data-project-description="Um site que apresenta a Gang E-Sports, uma equipe de e-sports de ponta que fomenta a rivalidade virtual. Com habilidade incomparável e dedicação inabalável, nossos jogadores traçam um caminho para a vitória."
+                         data-project-url="https://gangteamesports.github.io/">
 
-                        <img src="files/pedrosite.png" 
+                        <img src="files/gangsite.png" 
                              alt="Imagem de Blog Corporativo"
                              class="w-full h-full object-cover transition-transform duration-500 ease-in-out group-hover:scale-110">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent"></div>
                         <div class="absolute bottom-0 left-0 p-8">
-                            <span class="text-purple-300 font-medium text-sm">Porfólio Pessoal (Carrd)</span>
-                            <h3 class="text-3xl font-bold text-white mt-2">Perfil do Pedro Davi</h3>
+                            <span class="text-purple-300 font-medium text-sm">Site de uma organização de e-sports</span>
+                            <h3 class="text-3xl font-bold text-white mt-2">Gang Team E-Sports</h3>
                         </div>
                     </div>
                 </div>
