--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
 <body class="bg-white text-gray-800">
 
     <!-- ===== Header ===== -->
-    <header id="header" class="fixed top-0 left-0 right-0 z-50 transition-all duration-300 ease-in-out">
+    <!-- CORREÇÃO: Alterado z-50 para z-40 para ficar abaixo do chat e do modal -->
+    <header id="header" class="fixed top-0 left-0 right-0 z-40 transition-all duration-300 ease-in-out">
         <nav class="container mx-auto max-w-7xl px-6 py-4 flex justify-between items-center">
             <!-- Logo -->
             <a href="#" class="nav-logo transition-transform duration-300 hover:scale-105">
@@ -1042,8 +1043,8 @@
     </footer>
 
     <!-- ===== MODAL DE PROJETO ATUALIZADO COM SLIDER ===== -->
-    <!-- ATUALIZADO: Removida a classe 'hidden' inicial. O CSS agora controla o estado inicial. -->
-    <div id="project-modal" class="fixed inset-0 z-50 flex items-center justify-center p-4">
+    <!-- CORREÇÃO: Corrigido de z-60 (inválido) para z-[60] (válido) -->
+    <div id="project-modal" class="fixed inset-0 z-[60] flex items-center justify-center p-4">
         <!-- Overlay -->
         <div id="modal-overlay" class="absolute inset-0 bg-black/70 backdrop-blur-sm"></div>
         
@@ -1097,7 +1098,8 @@
     <!-- ===== FIM DO MODAL ===== -->
 
     <!-- ===== CHATBOT WIDGET ===== -->
-    <div id="chat-widget-container" class="fixed bottom-6 right-6 z-40"> <!-- Z-index reduzido para ficar abaixo do modal -->
+    <!-- CORREÇÃO: Alterado z-40 para z-50 para ficar acima do header (z-40) -->
+    <div id="chat-widget-container" class="fixed bottom-6 right-6 z-50"> <!-- Z-index acima do header (40) e abaixo do modal (60) -->
         
         <!-- Janela do Chat (Oculta por padrão) -->
         <div id="chat-window" class="hidden absolute bottom-20 right-0 w-80 max-w-[calc(100vw-3rem)] sm:w-96 sm:max-w-sm bg-white rounded-2xl shadow-xl border border-gray-200"
