--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
     <meta name="robots" content="index, follow">
     
     <!-- URL Canônica: Evita conteúdo duplicado (substitua pelo seu domínio real) -->
-    <link rel="canonical" href="https://voidstudio.dev/"> <!-- SUBSTITUA PELO SEU DOMÍNIO -->
+    <link rel="canonical" href="https://voidstudioapp.github.io/"> <!-- SUBSTITUA PELO SEU DOMÍNIO -->
 
     <!-- Open Graph (para Facebook, LinkedIn, etc.) -->
     <meta property="og:title" content="Void Studio - Apps, Sites, Jogos e Soluções de IA">
     <meta property="og:description" content="Especialistas na criação de apps, sites, jogos e soluções de IA. Transformamos sua ideia em uma experiência digital.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://voidstudio.dev/"> <!-- SUBSTITUA PELO SEU DOMÍNIO -->
+    <meta property="og:url" content="https://voidstudioapp.github.io/"> <!-- SUBSTITUA PELO SEU DOMÍNIO -->
     <meta property="og:image" content="https://voidstudio.dev/files/iconvoid.png"> <!-- SUBSTITUA PELA URL COMPLETA DA IMAGEM -->
 
     <!-- Twitter Card (para X/Twitter) -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Void Studio - Apps, Sites, Jogos e Soluções de IA">
     <meta name="twitter:description" content="Especialistas na criação de apps, sites, jogos e soluções de IA. Transformamos sua ideia em uma experiência digital.">
-    <meta name="twitter:image" content="https://voidstudio.dev/files/iconvoid.png"> <!-- SUBSTITUA PELA URL COMPLETA DA IMAGEM -->
+    <meta name="twitter:image" content="https://voidstudioapp.github.io/files/iconvoid.png"> <!-- SUBSTITUA PELA URL COMPLETA DA IMAGEM -->
 
     <!-- *** FIM DAS NOVAS META TAGS *** -->
 
