Update fmt.Println output from 'Hello World'

--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
                          data-project-type="Loja de Produtos de Salão de Beleza (Em desenvolvimento)"
                          data-project-media="files/jei.png"
                          data-project-description="E-commerce para a marca Jei Professional, focado em produtos de beleza. Design elegante, sistema de carrinho de compras e integração com gateways de pagamento. (Em desenvolvimento)"
-                         data-project-url="">
+                         data-project-url="http://www.jeiprofessional.com.br/">
                          
                         <!-- CORREÇÃO SEO: Alt text corrigido -->
                         <img src="files/jei.png" 
@@ -1821,4 +1821,5 @@ document.addEventListener('DOMContentLoaded', () => {
 
     </script>
 </body>
+
 </html>
