--- a/index.html
+++ b/index.html
@@ -1082,9 +1082,9 @@
                     </div>
                     <div class="project-card group relative rounded-2xl overflow-hidden shadow-lg animated-element slide-up delay-100 cursor-pointer"
                          data-project-title="Jei Professional"
-                         data-project-type="Loja de Produtos de Salão de Beleza (Em desenvolvimento)"
+                         data-project-type="Loja de Produtos de Salão de Beleza"
                          data-project-media="files/jei.png"
-                         data-project-description="E-commerce para a marca Jei Professional, focado em produtos de beleza. Design elegante, sistema de carrinho de compras e integração com gateways de pagamento. (Em desenvolvimento)"
+                         data-project-description="E-commerce para a marca Jei Professional, focado em produtos de beleza. Design elegante, sistema de carrinho de compras e integração com gateways de pagamento."
                          data-project-url="http://www.jeiprofessional.com.br/">
                          
                         <!-- CORREÇÃO SEO: Alt text corrigido -->
@@ -1093,7 +1093,7 @@
                              class="w-full h-full object-cover transition-transform duration-500 ease-in-out group-hover:scale-110">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent"></div>
                         <div class="absolute bottom-0 left-0 p-8">
-                            <span class="text-purple-300 font-medium text-sm">Loja de Produtos de Salão de Beleza (Em desenvolvimento)</span>
+                            <span class="text-purple-300 font-medium text-sm">Loja de Produtos de Salão de Beleza</span>
                             <h3 class="text-3xl font-bold text-white mt-2">Jei Professional</h3>
                         </div>
                     </div>
@@ -1823,3 +1823,4 @@ document.addEventListener('DOMContentLoaded', () => {
 </body>
 
 </html>
+
