--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             <!-- Links de Navegação (Desktop) -->
             <div class="hidden md:flex space-x-8 items-center">
                 <a href="#sobre" class="nav-link text-gray-600 hover:text-purple-700 transition-colors duration-300 font-medium">Sobre Nós</a>
-                <a href="https://void-studio-4.myshopify.com/" class=" text-gray-600 hover:text-purple-700 transition-colors duration-300 font-medium" target="_blank" rel="noopener noreferrer">Loja</a>
+                <a href="loja.html" class=" text-gray-600 hover:text-purple-700 transition-colors duration-300 font-medium">Loja</a>
                 <a href="#servicos" class="nav-link text-gray-600 hover:text-purple-700 transition-colors duration-300 font-medium">Serviços</a>
                 <a href="#projetos" class="nav-link text-gray-600 hover:text-purple-700 transition-colors duration-300 font-medium">Projetos</a>
                 <a href="#page-jogos" class="nav-link text-gray-600 hover:text-purple-700 transition-colors duration-300 font-medium">Jogos</a>
@@ -347,7 +347,7 @@
         <!-- Menu Mobile (Oculto por padrão) -->
         <div id="mobile-menu" class="hidden md:hidden bg-white shadow-xl absolute top-full left-0 right-0">
             <a href="#sobre" class="nav-link block px-6 py-4 text-gray-600 hover:bg-purple-50 hover:text-purple-700 transition-colors duration-300">Sobre Nós</a>
-            <a href="https://void-studio-4.myshopify.com/" class="block px-6 py-4 text-gray-600 hover:bg-purple-50 hover:text-purple-700 transition-colors duration-300">Loja</a>
+            <a href="loja.html" class="block px-6 py-4 text-gray-600 hover:bg-purple-50 hover:text-purple-700 transition-colors duration-300">Loja</a>
             <a href="#servicos" class="nav-link block px-6 py-4 text-gray-600 hover:bg-purple-50 hover:text-purple-700 transition-colors duration-300">Serviços</a>
             <a href="#projetos" class="nav-link block px-6 py-4 text-gray-600 hover:bg-purple-50 hover:text-purple-700 transition-colors duration-300">Projetos</a>
             <a href="#page-jogos" class="nav-link block px-6 py-4 text-gray-600 hover:bg-purple-50 hover:text-purple-700 transition-colors duration-300">Jogos</a>
@@ -1156,8 +1156,8 @@
                 <a href="https://www.youtube.com/@voidstudioapp" target="_blank" rel="noopener noreferrer" class="hover:text-white transition-colors duration-300" aria-label="Link para o Youtube">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0C.515 3.422 0 4.29 0 8.826v6.348c0 4.537.515 5.404 4.385 5.642 3.6.245 11.626.246 15.23 0 3.87-.238 4.385-1.105 4.385-5.642V8.826c0-4.536-.515-5.404-4.385-5.642zM9.412 15.275V8.725l5.88 3.275-5.88 3.275z"/></svg>
                 </a>
-                <a href="https://www.behance.net/pedrodavi120" target="_blank" rel="noopener noreferrer" class="text-gray-500 hover:text-purple-700 transition-colors duration-300" aria-label="Behance de Pedro Davi">
-                            <ion-icon name="logo-behance" class="h-6 w-6"></ion-icon>
+                <a href="https://www.behance.net/pedrodavi120" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors duration-300" aria-label="Behance de Pedro Davi">
+                    <ion-icon name="logo-behance" class="h-6 w-6"></ion-icon>
                 </a>
                 <!-- NOVO ÍCONE DO TIKTOK -->
                 <a href="https://www.tiktok.com/@voidstudioapp" target="_blank" rel="noopener noreferrer" class="hover:text-white transition-colors duration-300" aria-label="Link para o TikTok">
