--- a/loja.html
+++ b/loja.html
@@ -257,7 +257,7 @@
                          data-product-price="15,00"
                          data-product-images="files/vocalis.png, files/vocalis2.png"
                          data-product-details="Vocalis é um software de desktop (Windows) que usa IA de última geração para isolar e remover ruídos de fundo (ventilação, tráfego, estática) de qualquer áudio, preservando a clareza da voz. Ideal para podcasters, criadores de conteúdo e profissionais de comunicação."
-                         data-product-link="https://www.mercadopago.com.br/checkout/v1/redirect?pref_id=MP_VocalisAI_1500"
+                         data-product-link="https://mpago.la/11qcjGA"
                          data-product-demo-url="">
                         <img src="files/vocalis.png" 
                              alt="Imagem do software Vocalis AI - Remoção de Ruído"
@@ -282,7 +282,7 @@
                          data-product-price="49,90"
                          data-product-images="files/e-book.png, files/e-book2.png"
                          data-product-details="Este guia rápido ensina os princípios essenciais de User Experience (UX) e User Interface (UI) focado em agilidade e resultados. Aprenda a prototipar e estilizar interfaces responsivas usando a metodologia Tailwind CSS, ideal para desenvolvedores que precisam de um design de qualidade sem perder tempo."
-                         data-product-link="https://www.mercadopago.com.br/checkout/v1/redirect?pref_id=MP_EbookUXUI_4990"
+                         data-product-link="https://mpago.la/29tBYvt"
                          data-product-demo-url="">
                         <img src="files/e-book.png"
                              alt="Capa do E-book de UX/UI Rápida"
@@ -307,7 +307,7 @@
                          data-product-price="300,00"
                          data-product-images="files/template2.png, files/template.png"
                          data-product-details="Template profissional de portfólio single-page, construído com HTML e Tailwind CSS. 100% responsivo, otimizado para velocidade e fácil de personalizar. Perfeito para desenvolvedores, designers e freelancers que precisam de um site de apresentação moderno e elegante."
-                         data-product-link="https://www.mercadopago.com.br/checkout/v1/redirect?pref_id=MP_TemplatePortfolio_30000"
+                         data-product-link="https://mpago.la/2txYoMm"
                          data-product-demo-url="https://voidstudioapp.github.io/index.html">
                         <img src="files/template2.png"
                              alt="Template de Portfólio em HTML/Tailwind CSS"
