--- a/index.html
+++ b/index.html
@@ -1526,5 +1526,7 @@
         document.getElementById('modal-slide-next').onclick = () => { if (currentSlide < slides.length - 1) currentSlide++; updateSlider(); };
 
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2625692900353583"
+     crossorigin="anonymous"></script>
 </body>
 </html>
