--- a/loja.html
+++ b/loja.html
@@ -1149,5 +1149,7 @@
         setTimeout(() => addMsg("Olá! Bem-vindo à Loja Void. Posso ajudar a encontrar algo?", 'bot'), 1000);
 
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2625692900353583"
+     crossorigin="anonymous"></script>
 </body>
 </html>
